# api-server

./: .example.env  .gitignore  README.md  pyproject.toml
coffee_house/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: admin.py  exceptions.py  services.py  urls.py  views.py
gifts/: admin.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
gifts/migrations/: 0001_initial.py
gifts/tests/: factories.py
mailing/: serializers.py  services.py  tasks.py  urls.py  views.py
shops/: permissions.py  tasks.py  urls.py
shops/admin/: __init__.py  employee_invitations.py  gift_codes.py  sale_codes.py  shop_admins.py  shop_clients.py  shop_employees.py  shop_groups.py  shop_product_categories.py  shop_products.py  shop_sales.py  shop_salesmans.py  shops.py  subscriptions.py
shops/exceptions/: __init__.py  employee_invitations.py  sale_codes.py  sale_temporary_codes.py  shop_clients.py  shop_employees.py  shop_sales.py  shop_salesmans.py
shops/migrations/: 0001_initial.py  0002_alter_shop_gift_name.py  0002_alter_shopclient_user.py  0002_alter_shopclient_user_and_more.py  0002_alter_shopgroup_bot.py  0002_shop_birthdays_offer_after_nth_sale.py  0002_shop_each_nth_cup_free.py  0003_alter_employeeinvitation_options_and_more.py  0003_alter_shopproduct_options_and_more.py  0003_remove_shop_each_nth_cup_free_and_more.py  0003_saletemporarycode.py  0003_shopclient_shop_group.py  0004_alter_saletemporarycode_id.py  0004_alter_saletemporarycode_unique_together_and_more.py  0004_alter_shopgroup_gift_photo_url.py  0004_remove_shopgroup_gift_photo_url_shopgroup_gift_photo_and_more.py  0004_shopclient_born_on.py  0005_alter_shopsalesman_shop.py  (+8 more)
telegram/: authentication.py  permissions.py  urls.py
(+104 files in other folders)
